--- a/Echonotes/res/values/strings.xml
+++ b/Echonotes/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">Echonotes</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="action_search">Search</string>
 
 </resources>
