--- a/Echonotes/res/values/strings.xml
+++ b/Echonotes/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Echonotes</string>
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
+    <string name="dropen">Open</string>
+    <string name="drclose">Close</string>
 
 </resources>
