--- a/Echonotes/res/values/strings.xml
+++ b/Echonotes/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string-array name="tags">
         <item>MOBICOM</item>
         <item>ADVSTAT</item>
+        <item>COMPILE</item>
+        <item>Others</item>
     </string-array>
 
     <string name="search_hint">Search notes</string>
