--- a/Echonotes/res/values/strings.xml
+++ b/Echonotes/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_search">Search</string>
 
     <string-array name="items">
-        <item>Record New Note</item>
+        <item>New Echonote</item>
         <item>Select Notes</item>
     </string-array>
 
